--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset='UTF-8'/>
     <title>LIZ Pro Cleaning</title>
     <link rel='stylesheet' href='styles.css'/>
-    
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class='logo-container'>
